--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "next": "14.2.3",
+    "notiflix": "^3.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
