--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "notiflix": "^3.2.7",
     "react": "^18",
