--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "sass": "^1.77.2",
+    "swiper": "^11.1.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
