--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/x-data-grid": "^6.20.0",
     "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.2.6",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
     "notiflix": "^3.2.7",
