--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
+    "next-nprogress-bar": "^2.1.2",
     "notiflix": "^3.2.7",
     "react": "^18",
     "react-confetti": "^6.1.0",
