--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.379.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
     "next-nprogress-bar": "^2.1.2",
