--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-data-grid": "^6.20.0",
     "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.2.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.379.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
