--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
-    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.77.2",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.3",
     "zustand": "^4.5.2"
   },
