feat(upgrade): deployment upgrade

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# BACKEND_URL="http://localhost:5000/api"
 BACKEND_URL="https://flat-sharing-server-llv.vercel.app/api"
 NEXT_PUBLIC_CLOUDINARY_PRESET="i7jmludc"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dkozp31ij"
